Two small copy tweaks
* Include contact in email link to be explicit
* Replace "mistakes" with "problems", a problem may not be a mistake

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -71,5 +71,5 @@
 </table>
 
 <p>
-    <a href="@link">Contact Becoming a Teacher Team to report a problem</a>
+    <a href="@link">Contact the Becoming a Teacher team to report a problem</a>
 </p>
