--- a/src/ui/Views/Home/Imported.cshtml
+++ b/src/ui/Views/Home/Imported.cshtml
@@ -12,7 +12,7 @@
 
       <p>We found @Model.TotalCount courses belonging to @Model.OrganisationName.</p>
 
-      <p>Check that your course information is correct. If there are any mistakes, you should contact the Becoming a Teacher team to let us know.</p>
+      <p>Check that your course information is correct. If there are any problems, you should contact the Becoming a Teacher team to let us know.</p>
       <p>To make any changes, for now you’ll still need to use UCAS web-link. Changes on UCAS will normally show here within one working day. </p>
 
       <p>Soon you’ll be able to add extra content to tell applicants more about you and your courses.</p>
