--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -56,12 +56,14 @@
             {
                 foreach (var variant in course.Variants)
                 {
-                    <tr>
-                        <td>@course.CourseTitle</td>
-                        <td>@variant.UcasCode</td>
-                        <td>@variant.GetCourseVariantType()</td>
-                        <td class="ucas-view-link"><a href="@Url.Action("details", "course", new {AccreditingProviderId = providerCourse.AccreditingProviderId, CourseTitle = course.CourseTitle})">View course</a></td>
-                    </tr>
+            <tr>
+                <td>@course.CourseTitle</td>
+                <td>@variant.UcasCode</td>
+                <td>@variant.GetCourseVariantType()</td>
+                <td class="ucas-view-link">
+                    <a href="@Url.Action("variants", "course", new { accreditingProviderId = providerCourse.AccreditingProviderId, courseTitle = course.CourseTitle, ucasCode = variant.UcasCode })">View course</a>
+                </td>
+            </tr>
                 }
             }
         </tbody>
