Allow_for_no_acc_providers

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -36,11 +36,13 @@
 
 @foreach (var providerCourse in Model.Courses.ProviderCourses)
 {
-
-    <h3 class="heading-medium">
-        <span class="heading-secondary">Accrediting provider</span>
-        @providerCourse.AccreditingProviderName
-    </h3>
+    if (!string.IsNullOrWhiteSpace(providerCourse.AccreditingProviderName))
+    {
+        <h3 class="heading-medium">
+            <span class="heading-secondary">Accrediting provider</span>
+            @providerCourse.AccreditingProviderName
+        </h3>
+    }
 
     <table class="ucas-info-table">
         <thead>
