Setup request access page with form
(cherry picked from commit 38039c74c44516f3e43a9fd4015f3fdfd50b7699)

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -15,7 +15,7 @@
         </h2>
 
         <p>
-            You can <a href="https://goo.gl/forms/knDj4JYC06iiZDn72">request a DfE Sign-in account</a> for others who manage your courses.
+            You can @Html.ActionLink("request a DfE Sign-in account", "Index", "RequestAccess") for others who manage your courses.
         </p>
 
         <h2 class="heading-large">
