Add copy about future features
On the `we imported` page, which we aren't using, we hinted that further fields would be available soon, and that in the future UCAS would go away.

We need to echo that in the "Check courses" section.

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -31,6 +31,12 @@
         <p>
             To make any changes, for now you’ll still need to use UCAS web-link. Changes on UCAS will normally show here within one working day.
         </p>
+        <p>
+            Soon you’ll be able to add extra content to tell applicants more about you and your courses.
+        </p>
+        <p>
+            In the future, you’ll be able to edit all course information here.
+        </p>
     </div>
 </div>
 
