--- a/src/ui/Views/Home/Imported.cshtml
+++ b/src/ui/Views/Home/Imported.cshtml
@@ -4,9 +4,9 @@
 
 }
 
-<div class="grid-row">
-    <div class="column-two-thirds">
-      <h1 class="heading-xlarge">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
         We’ve imported your training courses from UCAS
       </h1>
 
