Added the pdf to courses listing page

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -32,7 +32,7 @@
             To make any changes, for now you’ll still need to use UCAS web-link. Changes on UCAS will normally show here within one working day.
         </p>
         <p>
-            Soon you’ll be able to add extra content to tell applicants more about you and your courses.
+            Soon you’ll be able to add extra content to tell applicants more about you and your courses. <a href="https://afdebatmanageui.blob.core.windows.net/public-assets/How%20to%20prepare%20the%20rest%20of%20your%20course%20information.pdf">Find out more about this here</a>.
         </p>
         <p>
             In the future, you’ll be able to edit all course information here.
