--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -10,7 +10,10 @@ $govuk-global-styles: true;
 $success-colour: $button-colour;
 
 @import "patterns/course-parts";
+
 @import "patterns/success-summary";
+
+@import "patterns/definition-list";
 
 // https://github.com/alphagov/govuk-frontend/issues/828
 .govuk-header {
@@ -22,13 +25,7 @@ $success-colour: $button-colour;
     border: 4px solid $error-colour;
 }
 
-.breadcrumbs {
-   @include breadcrumbs;
-   overflow: hidden;
-}
-
-.phase-banner-wrapper
-{
+.phase-banner-wrapper {
     max-width: 960px;
     margin: 0 15px;
     margin: 0 30px;
@@ -49,32 +46,8 @@ $success-colour: $button-colour;
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
-.remove-top-margin {
-    margin-top: 0;
-}
-
-.remove-bottom-margin {
-    margin-bottom: 0;
-}
-
-// .add-bottom-margin {
-//     margin-bottom:  govuk-spacing(2) / 2;
-// }
-
 .add-double-bottom-margin {
     margin-bottom:  govuk-spacing(2);
-}
-
-.add-top-margin {
-    margin-top:  govuk-spacing(2) / 2;
-}
-
-.add-margin-for-label {
-    margin-top: 25px;
-}
-
-.add-margin-for-label-with-help {
-    margin-top: 45px;
 }
 
 .form-control-full {
@@ -152,31 +125,6 @@ $success-colour: $button-colour;
 
 .form-control-small {
     width: 200px;
-}
-
-dt,
-dd {
-    display: inline;
-}
-
-dt {
-    margin-right: 0.25em;
-}
-
-dl.aligned {
-    overflow: hidden;
-}
-
-dl.aligned dt {
-    width: 30%;
-    float: left;
-    margin: 0;
-    clear: both;
-}
-
-dl.aligned dd {
-    width: 70%;
-    float: right;
 }
 
 .tabs {
