--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -22,7 +22,7 @@ $success-colour: $button-colour;
 
 // Add a red border to .form-control-group if validation fails
 .input-validation-error {
-    border: 4px solid $error-colour;
+    border: 4px solid govuk-color("red");
 }
 
 .phase-banner-wrapper {
