--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 {
                     <li class="govuk-header__navigation-item">
                         <a class="govuk-header__link" asp-controller="Auth" asp-action="Logout">Sign out</a> 
-                        <a href="@profileUrl">(@name)</a>
+                        <a class="govuk-header__link--profile"  href="@profileUrl">@name</a>
                     </li>
                 }
                 else
