--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -6,14 +6,14 @@
     var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 }
 
-<div class="link-back">
-    @if (Model.OrganisationCount > 1)
+<div>
+    @if (Model.MultipleOrganisations)
     {
 
-        <a href="@Url.Action("index","Organisations")">Organisations</a>
-    }
-    <a href="@Url.Action("index","courses", new {organisationId= Model.OrganisationId, organisationCount = Model.OrganisationCount})">Courses</a>
-</div>    
+        <a href="@Url.Action("index","Organisations")">Organisations</a><strong> &rsaquo; </strong>
+        }
+        <a href="@Url.Action("index","courses", new {organisationId= Model.OrganisationId})">@Model.OrganisationName</a>
+    </div>    
 
 <h1 class="heading-xlarge">
     <span class="heading-secondary">@Model.Course.Name</span>
