--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -3,9 +3,9 @@
 @{
     Layout = "_Layout";
 }
-@if (Model.OrganisationCount > 1)
+@if (Model.MultipleOrganisations)
 {
-    <a class="link-back" href="@Url.Action("index","Organisations")">Organisations</a>
+    <a href="@Url.Action("index","Organisations")">Organisations</a>
 }
 
 <div class="grid-row add-double-bottom-margin">
@@ -74,7 +74,7 @@
                 <td>@variant.UcasCode</td>
                 <td>@variant.GetCourseVariantType()</td>
                 <td class="ucas-view-link">
-                    <a href="@Url.Action("variants", "course", new { accreditingProviderId = providerCourse.AccreditingProviderId, courseTitle = course.CourseTitle, ucasCode = variant.UcasCode, organisationId = Model.Courses.OrganisationId, organisationCount = Model.OrganisationCount })">View course</a>
+                    <a href="@Url.Action("variants", "course", new { accreditingProviderId = providerCourse.AccreditingProviderId, courseTitle = course.CourseTitle, ucasCode = variant.UcasCode, organisationId = Model.Courses.OrganisationId })">View course</a>
                 </td>
             </tr>
                 }
