--- a/src/ui/Views/Organisations/Index.cshtml
+++ b/src/ui/Views/Organisations/Index.cshtml
@@ -14,6 +14,6 @@
 @foreach (var organisation in Model.Oganisations)
 {
 <h3 class="heading-medium">
-    <span><a href="@Url.Action("Index", "courses", new { organisationId = organisation.OrganisationId, organisationCount = Model.Oganisations.Count() })">@organisation.OrganisationName</a><br/>@organisation.TotalCourses courses</span>
+    <span><a href="@Url.Action("Index", "courses", new { organisationId = organisation.OrganisationId })">@organisation.OrganisationName</a><br/>@organisation.TotalCourses courses</span>
 </h3>
 }
