Added the confirmation for showing the confirmation for request acess

--- a/src/ui/Styles/site.scss
+++ b/src/ui/Styles/site.scss
@@ -1,6 +1,7 @@
 ﻿@import "govuk-elements";
 
 @import "patterns/course-parts";
+@import 'patterns/success-summary';
 
 #proposition-links {
     color: $white;
