--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="grid-row add-double-bottom-margin">
+    @Html.Partial("~/Views/Courses/Shared/RequestAccessSuccess.cshtml")
+
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">
             @Model.Courses.OrganisationName
