Fix compiling of sass

--- a/src/ui/Styles/site.scss
+++ b/src/ui/Styles/site.scss
@@ -1,7 +1,7 @@
 ﻿@import "govuk-elements";
 
 @import "patterns/course-parts";
-@import 'patterns/success-summary';
+@import "patterns/success-summary";
 
 #proposition-links {
     color: $white;
