--- a/src/ui/Styles/site.scss
+++ b/src/ui/Styles/site.scss
@@ -1,5 +1,7 @@
 ﻿@import "govuk-elements";
 
+$success-colour: $button-colour;
+
 @import "patterns/course-parts";
 @import "patterns/success-summary";
 
