--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "_Layout";
-
+    ViewBag.Title = Model.Course.Name;
     var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 }
 
