Update content of error pages

--- a/src/ui/Views/Error/ServerError.cshtml
+++ b/src/ui/Views/Error/ServerError.cshtml
@@ -3,11 +3,9 @@
 <div class="grid-row">
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Sorry, something went wrong</h1>
-        <p>This may be because your session timed out or there was a system error.</p>
-        <p>This could be because:</p>
-        <ul>
-            <li>the link you clicked is broken</li>
-            <li>you entered an incorrect web address</li>
-        </ul>
+        <p class="govuk-body">Sorry, we're experiencing technical difficulties.</p>
+        <p class="govuk-body">
+            <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">Contact the Becoming a Teacher team</a> if you continue to see this error.
+        </p>
     </div>
 </div>
