--- a/src/ui/Views/Error/NotFound.cshtml
+++ b/src/ui/Views/Error/NotFound.cshtml
@@ -3,10 +3,9 @@
 <div class="grid-row">
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Page not found</h1>
-        <p class="govuk-body">If you typed the web address, check it is correct.</p>
-        <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
+        <p class="govuk-body">If you entered a web address please check it was correct.</p>
         <p class="govuk-body">
-        <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">Contact the Becoming a Teacher team</a> if you believe you are seeing this message in error.
+            <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">Contact the Becoming a Teacher team</a> if you believe you are seeing this message in error.
         </p>
     </div>
 </div>
